--- a/scssak-fe/.vscode/settings.json
+++ b/scssak-fe/.vscode/settings.json
@@ -3,7 +3,7 @@
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "javascript.format.enable": false,
   "eslint.alwaysShowStatus": true,
